# szurubooru

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  API.md  INSTALL-OLD.md  INSTALL.md  LICENSE  Makefile  README.md  TODO  alembic.ini  composer.json  config.ini  config.ini.dist  config.yaml.dist  customdocker2 master.7z  customdocker2 stable master v2.7z  di.php  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  docker-compose.yml.example  example.env  gruntfile.js  init.php  install.sh  nginx.vhost.production  package.json  phpcheckstyle.cfg  phpunit.xml  rebuild-and-run.sh  run-tests.sh  upgrade.php
doc/: API.md  (+5 more)
server/: .ash_history  .dockerignore  .flake8  .pylintrc  Dockerfile  Dockerfile - Copy  Dockerfile - Copy (2)  Dockerfile.test  alembic.ini  config.yaml.dist  dev-requirements.txt  docker-start-dev.sh  docker-start.sh  generate-thumb  host-waitress  lint  migrate-v1  mypy.ini  pyproject.toml  recheck-post-audio  requirements.txt  reset-password  setup.cfg  szuru-admin  test  wait-for-es
server/hooks/: build  post_push  pre_build  test
server/szurubooru/: app.py  config.py  db.py  errors.py  facade.py  util.py
server/szurubooru/api/: __init__.py  ban_api.py  base_api.py  comment_api.py  context.py  embed_api.py  info_api.py  metric_api.py  oembed_api.py  opengraph_api.py  password_reminder_api.py  password_reset_api.py  pool_api.py  pool_category_api.py  post_api.py  snapshot_api.py  tag_api.py  tag_category_api.py  upload_api.py  user_api.py  user_token_api.py  users.py
server/tests/: test_util.py
(+2163 files in other folders)
